src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from Parser.y
-----------------------------------------------------------------------------

state 74 contains 13 shift/reduce conflicts.

terminal eof is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseOwl -> program                         (0)
	program -> decls expr                              (1)
	name -> ident                                      (2)
	decls -> many__semi_decl__                         (3)
	semi_decl -> decl ';'                              (4)
	decl -> let name many__name__ be expr              (5)
	decl -> typ name is type                           (6)
	expr -> exprapp                                    (7)
	expr -> exprcond                                   (8)
	expr -> '-' expr                                   (9)
	expr -> '!' expr                                   (10)
	expr -> '@' many__name__ '=>' expr                 (11)
	expr -> expr '$' expr                              (12)
	expr -> expr '+' expr                              (13)
	expr -> expr '-' expr                              (14)
	expr -> expr '*' expr                              (15)
	expr -> expr '/' expr                              (16)
	expr -> expr '=' expr                              (17)
	expr -> expr '!=' expr                             (18)
	expr -> expr '<' expr                              (19)
	expr -> expr '>' expr                              (20)
	expr -> expr '<=' expr                             (21)
	expr -> expr '>=' expr                             (22)
	expr -> expr '&' expr                              (23)
	expr -> expr '|' expr                              (24)
	exprapp -> exprapp atom                            (25)
	exprapp -> atom                                    (26)
	exprcond -> if expr then expr else expr            (27)
	atom -> '(' ')'                                    (28)
	atom -> '{' sepBy__stmt__';'__ '}'                 (29)
	atom -> '(' expr ')'                               (30)
	atom -> name                                       (31)
	atom -> boolean                                    (32)
	atom -> integer                                    (33)
	stmt -> expr                                       (34)
	stmt -> decl                                       (35)
	type -> name                                       (36)
	type -> '(' type ')'                               (37)
	type -> type '->' type                             (38)
	many__name__ -> many_rev__name__                   (39)
	many__semi_decl__ -> many_rev__semi_decl__         (40)
	sepBy__stmt__';'__ -> sepBy_rev__stmt__';'__       (41)
	many_rev__name__ ->                                (42)
	many_rev__name__ -> many_rev__name__ name          (43)
	many_rev__semi_decl__ ->                           (44)
	many_rev__semi_decl__ -> many_rev__semi_decl__ semi_decl   (45)
	sepBy_rev__stmt__';'__ -> stmt                     (46)
	sepBy_rev__stmt__';'__ -> sepBy_rev__stmt__';'__ ';' stmt   (47)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { L.RangedToken (L.Identifier _) _ }
	integer        { L.RangedToken (L.Integer _) _ }
	boolean        { L.RangedToken (L.Boolean _) _ }
	let            { L.RangedToken L.Let _ }
	be             { L.RangedToken L.Be _ }
	if             { L.RangedToken L.If _ }
	then           { L.RangedToken L.Then _ }
	else           { L.RangedToken L.Else _ }
	'+'            { L.RangedToken L.Plus _ }
	'-'            { L.RangedToken L.Minus _ }
	'*'            { L.RangedToken L.Times _ }
	'/'            { L.RangedToken L.Divide _ }
	'='            { L.RangedToken L.Eq _ }
	'!='           { L.RangedToken L.Neq _ }
	'<'            { L.RangedToken L.Lt _ }
	'<='           { L.RangedToken L.Lteq _ }
	'>'            { L.RangedToken L.Gt _ }
	'>='           { L.RangedToken L.Gteq _ }
	'&'            { L.RangedToken L.And _ }
	'|'            { L.RangedToken L.Or _ }
	'!'            { L.RangedToken L.Not _ }
	'('            { L.RangedToken L.LParen _ }
	')'            { L.RangedToken L.RParen _ }
	'{'            { L.RangedToken L.LBrace _ }
	'}'            { L.RangedToken L.RBrace _ }
	';'            { L.RangedToken L.SemiColon _ }
	'$'            { L.RangedToken L.Dollar _ }
	'@'            { L.RangedToken L.At _ }
	'=>'           { L.RangedToken L.ThickArrow _ }
	typ            { L.RangedToken L.Type _ }
	is             { L.RangedToken L.Is _ }
	'->'           { L.RangedToken L.Arrow _ }
	eof            { L.RangedToken L.EOF _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseOwl rule  0
	program         rule  1
	name            rule  2
	decls           rule  3
	semi_decl       rule  4
	decl            rules 5, 6
	expr            rules 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24
	exprapp         rules 25, 26
	exprcond        rule  27
	atom            rules 28, 29, 30, 31, 32, 33
	stmt            rules 34, 35
	type            rules 36, 37, 38
	many__name__    rule  39
	many__semi_decl__ rule  40
	sepBy__stmt__';'__ rule  41
	many_rev__name__ rules 42, 43
	many_rev__semi_decl__ rules 44, 45
	sepBy_rev__stmt__';'__ rules 46, 47

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseOwl -> . program                        (rule 0)

	ident          reduce using rule 44
	integer        reduce using rule 44
	boolean        reduce using rule 44
	let            reduce using rule 44
	if             reduce using rule 44
	'-'            reduce using rule 44
	'!'            reduce using rule 44
	'('            reduce using rule 44
	'{'            reduce using rule 44
	'@'            reduce using rule 44
	typ            reduce using rule 44

	program        goto state 5
	decls          goto state 2
	many__semi_decl__goto state 3
	many_rev__semi_decl__goto state 4

State 1

	program -> . decls expr                             (rule 1)


	decls          goto state 2
	many__semi_decl__goto state 3
	many_rev__semi_decl__goto state 4

State 2

	program -> decls . expr                             (rule 1)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 11
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 3

	decls -> many__semi_decl__ .                        (rule 3)

	ident          reduce using rule 3
	integer        reduce using rule 3
	boolean        reduce using rule 3
	if             reduce using rule 3
	'-'            reduce using rule 3
	'!'            reduce using rule 3
	'('            reduce using rule 3
	'{'            reduce using rule 3
	'@'            reduce using rule 3


State 4

	many__semi_decl__ -> many_rev__semi_decl__ .        (rule 40)
	many_rev__semi_decl__ -> many_rev__semi_decl__ . semi_decl    (rule 45)

	ident          reduce using rule 40
	integer        reduce using rule 40
	boolean        reduce using rule 40
	let            shift, and enter state 8
	if             reduce using rule 40
	'-'            reduce using rule 40
	'!'            reduce using rule 40
	'('            reduce using rule 40
	'{'            reduce using rule 40
	'@'            reduce using rule 40
	typ            shift, and enter state 9

	semi_decl      goto state 6
	decl           goto state 7

State 5

	%start_parseOwl -> program .                        (rule 0)

	%eof           accept


State 6

	many_rev__semi_decl__ -> many_rev__semi_decl__ semi_decl .    (rule 45)

	ident          reduce using rule 45
	integer        reduce using rule 45
	boolean        reduce using rule 45
	let            reduce using rule 45
	if             reduce using rule 45
	'-'            reduce using rule 45
	'!'            reduce using rule 45
	'('            reduce using rule 45
	'{'            reduce using rule 45
	'@'            reduce using rule 45
	typ            reduce using rule 45


State 7

	semi_decl -> decl . ';'                             (rule 4)

	';'            shift, and enter state 52


State 8

	decl -> let . name many__name__ be expr             (rule 5)

	ident          shift, and enter state 15

	name           goto state 51

State 9

	decl -> typ . name is type                          (rule 6)

	ident          shift, and enter state 15

	name           goto state 50

State 10

	atom -> name .                                      (rule 31)

	ident          reduce using rule 31
	integer        reduce using rule 31
	boolean        reduce using rule 31
	then           reduce using rule 31
	else           reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31
	'='            reduce using rule 31
	'!='           reduce using rule 31
	'<'            reduce using rule 31
	'<='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	'&'            reduce using rule 31
	'|'            reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'{'            reduce using rule 31
	'}'            reduce using rule 31
	';'            reduce using rule 31
	'$'            reduce using rule 31
	%eof           reduce using rule 31


State 11

	program -> decls expr .                             (rule 1)
	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            shift, and enter state 41
	'!='           shift, and enter state 42
	'<'            shift, and enter state 43
	'<='           shift, and enter state 44
	'>'            shift, and enter state 45
	'>='           shift, and enter state 46
	'&'            shift, and enter state 47
	'|'            shift, and enter state 48
	'$'            shift, and enter state 49
	%eof           reduce using rule 1


State 12

	expr -> exprapp .                                   (rule 7)
	exprapp -> exprapp . atom                           (rule 25)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	then           reduce using rule 7
	else           reduce using rule 7
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'*'            reduce using rule 7
	'/'            reduce using rule 7
	'='            reduce using rule 7
	'!='           reduce using rule 7
	'<'            reduce using rule 7
	'<='           reduce using rule 7
	'>'            reduce using rule 7
	'>='           reduce using rule 7
	'&'            reduce using rule 7
	'|'            reduce using rule 7
	'('            shift, and enter state 21
	')'            reduce using rule 7
	'{'            shift, and enter state 22
	'}'            reduce using rule 7
	';'            reduce using rule 7
	'$'            reduce using rule 7
	%eof           reduce using rule 7

	name           goto state 10
	atom           goto state 36

State 13

	expr -> exprcond .                                  (rule 8)

	then           reduce using rule 8
	else           reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'*'            reduce using rule 8
	'/'            reduce using rule 8
	'='            reduce using rule 8
	'!='           reduce using rule 8
	'<'            reduce using rule 8
	'<='           reduce using rule 8
	'>'            reduce using rule 8
	'>='           reduce using rule 8
	'&'            reduce using rule 8
	'|'            reduce using rule 8
	')'            reduce using rule 8
	'}'            reduce using rule 8
	';'            reduce using rule 8
	'$'            reduce using rule 8
	%eof           reduce using rule 8


State 14

	exprapp -> atom .                                   (rule 26)

	ident          reduce using rule 26
	integer        reduce using rule 26
	boolean        reduce using rule 26
	then           reduce using rule 26
	else           reduce using rule 26
	'+'            reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'/'            reduce using rule 26
	'='            reduce using rule 26
	'!='           reduce using rule 26
	'<'            reduce using rule 26
	'<='           reduce using rule 26
	'>'            reduce using rule 26
	'>='           reduce using rule 26
	'&'            reduce using rule 26
	'|'            reduce using rule 26
	'('            reduce using rule 26
	')'            reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26
	';'            reduce using rule 26
	'$'            reduce using rule 26
	%eof           reduce using rule 26


State 15

	name -> ident .                                     (rule 2)

	ident          reduce using rule 2
	integer        reduce using rule 2
	boolean        reduce using rule 2
	be             reduce using rule 2
	then           reduce using rule 2
	else           reduce using rule 2
	'+'            reduce using rule 2
	'-'            reduce using rule 2
	'*'            reduce using rule 2
	'/'            reduce using rule 2
	'='            reduce using rule 2
	'!='           reduce using rule 2
	'<'            reduce using rule 2
	'<='           reduce using rule 2
	'>'            reduce using rule 2
	'>='           reduce using rule 2
	'&'            reduce using rule 2
	'|'            reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	'{'            reduce using rule 2
	'}'            reduce using rule 2
	';'            reduce using rule 2
	'$'            reduce using rule 2
	'=>'           reduce using rule 2
	is             reduce using rule 2
	'->'           reduce using rule 2
	%eof           reduce using rule 2


State 16

	atom -> integer .                                   (rule 33)

	ident          reduce using rule 33
	integer        reduce using rule 33
	boolean        reduce using rule 33
	then           reduce using rule 33
	else           reduce using rule 33
	'+'            reduce using rule 33
	'-'            reduce using rule 33
	'*'            reduce using rule 33
	'/'            reduce using rule 33
	'='            reduce using rule 33
	'!='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'&'            reduce using rule 33
	'|'            reduce using rule 33
	'('            reduce using rule 33
	')'            reduce using rule 33
	'{'            reduce using rule 33
	'}'            reduce using rule 33
	';'            reduce using rule 33
	'$'            reduce using rule 33
	%eof           reduce using rule 33


State 17

	atom -> boolean .                                   (rule 32)

	ident          reduce using rule 32
	integer        reduce using rule 32
	boolean        reduce using rule 32
	then           reduce using rule 32
	else           reduce using rule 32
	'+'            reduce using rule 32
	'-'            reduce using rule 32
	'*'            reduce using rule 32
	'/'            reduce using rule 32
	'='            reduce using rule 32
	'!='           reduce using rule 32
	'<'            reduce using rule 32
	'<='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'&'            reduce using rule 32
	'|'            reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'{'            reduce using rule 32
	'}'            reduce using rule 32
	';'            reduce using rule 32
	'$'            reduce using rule 32
	%eof           reduce using rule 32


State 18

	exprcond -> if . expr then expr else expr           (rule 27)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 35
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 19

	expr -> '-' . expr                                  (rule 9)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 34
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 20

	expr -> '!' . expr                                  (rule 10)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 33
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 21

	atom -> '(' . ')'                                   (rule 28)
	atom -> '(' . expr ')'                              (rule 30)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	')'            shift, and enter state 32
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 31
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 22

	atom -> '{' . sepBy__stmt__';'__ '}'                (rule 29)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	let            shift, and enter state 8
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23
	typ            shift, and enter state 9

	name           goto state 10
	decl           goto state 26
	expr           goto state 27
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14
	stmt           goto state 28
	sepBy__stmt__';'__goto state 29
	sepBy_rev__stmt__';'__goto state 30

State 23

	expr -> '@' . many__name__ '=>' expr                (rule 11)

	ident          reduce using rule 42
	'=>'           reduce using rule 42

	many__name__   goto state 24
	many_rev__name__goto state 25

State 24

	expr -> '@' many__name__ . '=>' expr                (rule 11)

	'=>'           shift, and enter state 73


State 25

	many__name__ -> many_rev__name__ .                  (rule 39)
	many_rev__name__ -> many_rev__name__ . name         (rule 43)

	ident          shift, and enter state 15
	be             reduce using rule 39
	'=>'           reduce using rule 39

	name           goto state 72

State 26

	stmt -> decl .                                      (rule 35)

	'}'            reduce using rule 35
	';'            reduce using rule 35


State 27

	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)
	stmt -> expr .                                      (rule 34)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            shift, and enter state 41
	'!='           shift, and enter state 42
	'<'            shift, and enter state 43
	'<='           shift, and enter state 44
	'>'            shift, and enter state 45
	'>='           shift, and enter state 46
	'&'            shift, and enter state 47
	'|'            shift, and enter state 48
	'}'            reduce using rule 34
	';'            reduce using rule 34
	'$'            shift, and enter state 49


State 28

	sepBy_rev__stmt__';'__ -> stmt .                    (rule 46)

	'}'            reduce using rule 46
	';'            reduce using rule 46


State 29

	atom -> '{' sepBy__stmt__';'__ . '}'                (rule 29)

	'}'            shift, and enter state 71


State 30

	sepBy__stmt__';'__ -> sepBy_rev__stmt__';'__ .      (rule 41)
	sepBy_rev__stmt__';'__ -> sepBy_rev__stmt__';'__ . ';' stmt    (rule 47)

	'}'            reduce using rule 41
	';'            shift, and enter state 70


State 31

	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)
	atom -> '(' expr . ')'                              (rule 30)

	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            shift, and enter state 41
	'!='           shift, and enter state 42
	'<'            shift, and enter state 43
	'<='           shift, and enter state 44
	'>'            shift, and enter state 45
	'>='           shift, and enter state 46
	'&'            shift, and enter state 47
	'|'            shift, and enter state 48
	')'            shift, and enter state 69
	'$'            shift, and enter state 49


State 32

	atom -> '(' ')' .                                   (rule 28)

	ident          reduce using rule 28
	integer        reduce using rule 28
	boolean        reduce using rule 28
	then           reduce using rule 28
	else           reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'='            reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'&'            reduce using rule 28
	'|'            reduce using rule 28
	'('            reduce using rule 28
	')'            reduce using rule 28
	'{'            reduce using rule 28
	'}'            reduce using rule 28
	';'            reduce using rule 28
	'$'            reduce using rule 28
	%eof           reduce using rule 28


State 33

	expr -> '!' expr .                                  (rule 10)
	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)

	then           reduce using rule 10
	else           reduce using rule 10
	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            fail
	'!='           fail
	'<'            fail
	'<='           fail
	'>'            fail
	'>='           fail
	'&'            reduce using rule 10
	'|'            reduce using rule 10
	')'            reduce using rule 10
	'}'            reduce using rule 10
	';'            reduce using rule 10
	'$'            reduce using rule 10
	%eof           reduce using rule 10


State 34

	expr -> '-' expr .                                  (rule 9)
	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)

	then           reduce using rule 9
	else           reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            reduce using rule 9
	'!='           reduce using rule 9
	'<'            reduce using rule 9
	'<='           reduce using rule 9
	'>'            reduce using rule 9
	'>='           reduce using rule 9
	'&'            reduce using rule 9
	'|'            reduce using rule 9
	')'            reduce using rule 9
	'}'            reduce using rule 9
	';'            reduce using rule 9
	'$'            reduce using rule 9
	%eof           reduce using rule 9


State 35

	expr -> expr . '$' expr                             (rule 12)
	expr -> expr . '+' expr                             (rule 13)
	expr -> expr . '-' expr                             (rule 14)
	expr -> expr . '*' expr                             (rule 15)
	expr -> expr . '/' expr                             (rule 16)
	expr -> expr . '=' expr                             (rule 17)
	expr -> expr . '!=' expr                            (rule 18)
	expr -> expr . '<' expr                             (rule 19)
	expr -> expr . '>' expr                             (rule 20)
	expr -> expr . '<=' expr                            (rule 21)
	expr -> expr . '>=' expr                            (rule 22)
	expr -> expr . '&' expr                             (rule 23)
	expr -> expr . '|' expr                             (rule 24)
	exprcond -> if expr . then expr else expr           (rule 27)

	then           shift, and enter state 68
	'+'            shift, and enter state 37
	'-'            shift, and enter state 38
	'*'            shift, and enter state 39
	'/'            shift, and enter state 40
	'='            shift, and enter state 41
	'!='           shift, and enter state 42
	'<'            shift, and enter state 43
	'<='           shift, and enter state 44
	'>'            shift, and enter state 45
	'>='           shift, and enter state 46
	'&'            shift, and enter state 47
	'|'            shift, and enter state 48
	'$'            shift, and enter state 49


State 36

	exprapp -> exprapp atom .                           (rule 25)

	ident          reduce using rule 25
	integer        reduce using rule 25
	boolean        reduce using rule 25
	then           reduce using rule 25
	else           reduce using rule 25
	'+'            reduce using rule 25
	'-'            reduce using rule 25
	'*'            reduce using rule 25
	'/'            reduce using rule 25
	'='            reduce using rule 25
	'!='           reduce using rule 25
	'<'            reduce using rule 25
	'<='           reduce using rule 25
	'>'            reduce using rule 25
	'>='           reduce using rule 25
	'&'            reduce using rule 25
	'|'            reduce using rule 25
	'('            reduce using rule 25
	')'            reduce using rule 25
	'{'            reduce using rule 25
	'}'            reduce using rule 25
	';'            reduce using rule 25
	'$'            reduce using rule 25
	%eof           reduce using rule 25


State 37

	expr -> expr '+' . expr                             (rule 13)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 67
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 38

	expr -> expr '-' . expr                             (rule 14)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 66
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 39

	expr -> expr '*' . expr                             (rule 15)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 65
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 40

	expr -> expr '/' . expr                             (rule 16)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 64
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 41

	expr -> expr '=' . expr                             (rule 17)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 63
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 42

	expr -> expr '!=' . expr                            (rule 18)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 62
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 43

	expr -> expr '<' . expr                             (rule 19)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 61
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 44

	expr -> expr '<=' . expr                            (rule 21)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 60
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 45

	expr -> expr '>' . expr                             (rule 20)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 59
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 46

	expr -> expr '>=' . expr                            (rule 22)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 58
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 47

	expr -> expr '&' . expr                             (rule 23)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 57
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 48

	expr -> expr '|' . expr                             (rule 24)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 56
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 49

	expr -> expr '$' . expr                             (rule 12)

	ident          shift, and enter state 15
	integer        shift, and enter state 16
	boolean        shift, and enter state 17
	if             shift, and enter state 18
	'-'            shift, and enter state 19
	'!'            shift, and enter state 20
	'('            shift, and enter state 21
	'{'            shift, and enter state 22
	'@'            shift, and enter state 23

	name           goto state 10
	expr           goto state 55
	exprapp        goto state 12
	exprcond       goto state 13
	atom           goto state 14

State 50

	decl -> typ name . is type                          (rule 6)

	is             shift, and enter state 54


State 51

	decl -> let name . many__name__ be expr             (rule 5)

	ident          reduce using rule 42
	be             reduce using rule 42

	many__name__   goto state 53
	many_rev__name__goto state 25

State 52

	semi_decl -> decl ';' .                             (rule 4)

	ident          reduce using rule 4
	integer        reduce using rule 4
	boolean        reduce using rule 4
	let            reduce using rule 4
	if             reduce using rule 4
	'-'            reduce using rule 4
	'!'            reduce using rule 4
	'('            reduce using rule 4
	'{'            reduce using rule 4
	'@'            reduce using rule 4
	typ            reduce using rule 4


State 53

	decl -> let name many__name__ . be expr             (rule 5)

	be             shift, and enter state 80


State 54

	decl -> typ name is . type                          (rule 6)

	ident          shift, and enter state 15
	'('            shift, and enter state 79

	name           goto state 77
	type           goto state 78

State 55
